--- a/.bootstraprc
+++ b/.bootstraprc
@@ -19,10 +19,10 @@ styleLoaders:
 # It depends on value of NODE_ENV environment variable
 # This param can also be set in webpack config:
 #   entry: 'bootstrap-loader/extractStyles'
-extractStyles: false
+extractStyles: true
 # env:
 #   development:
-#     extractStyles: false
+#     extractStyles: true
 #   production:
 #     extractStyles: true
 
