--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run clean && webpack",
     "clean": "rimraf public",
-    "start": "webpack-dev-server --inline --open"
+    "start": "webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
@@ -27,12 +27,10 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
-    "i": "^0.3.6",
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
     "npm": "^5.4.2",
-    "open": "0.0.5",
     "resolve-url-loader": "^2.1.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
